--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
+    <meta charset="utf-8" />
+    <meta name="keywords" content="entreprise webdesign lyon, agence digitale lyon, agence web lyon, agences web lyon, agence communication digitale lyon"/>
+    <meta name="description" content="La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet."/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover"/>
+    
     <!-- Analytics -->
     <script>
       (function (i, s, o, g, r, a, m) {
@@ -28,30 +33,20 @@
     </script>
     <!-- Analytics END -->
 
-    <meta charset="utf-8" />
-    <meta
-      name="keywords"
-      content="entreprise webdesign lyon, agence digitale lyon, agence web lyon, agences web lyon, agence communication digitale lyon"
-    />
-    <meta
-      name="description"
-      content="La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet."
-    />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, viewport-fit=cover"
-    />
     <link rel="shortcut icon" type="image/png" href="favicon.jpg" />
+
     <link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css" />
-    <link rel="stylesheet" type="text/css" href="style.min.css" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css" />
     <link rel="stylesheet" type="text/css" href="./css/et-line.min.css" />
-    <script src="./js/jquery-3.6.0.min.js" async></script>
+
+    <script src="./js/jquery-3.6.0.min.js"></script>
     <script src="./js/bootstrap.min.js" async></script>
     <script src="./js/blocs.min.js" async></script>
     <script src="./js/jquery.touchSwipe.min.js" defer></script>
     <script src="./js/gmaps.min.js" async></script>
-    <title>La chouette agence</title>
+
+    <title>La chouette agence - entreprise de webdesign à lyon</title>
   </head>
   <body>
     <!-- Principal conteneur -->
@@ -67,24 +62,6 @@
                   alt="paris web design logo agence web meilleure agence"
                   height="40"
               /></a>
-              <button
-                id="nav-toggle"
-                type="button"
-                class="ui-navbar-toggle navbar-toggle"
-                data-toggle="collapse"
-                data-target=".navbar-1"
-              >
-                <span class="sr-only">Toggle navigation</span
-                ><span class="icon-bar"></span><span class="icon-bar"></span
-                ><span class="icon-bar"></span>
-              </button>
-            </div>
-            <div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
-              <ul class="site-navigation nav navbar-nav">
-                <li>
-                  <a href="contact.html">Contact</a>
-                </li>
-              </ul>
             </div>
           </nav>
         </div>
@@ -98,7 +75,6 @@
           bgc-dark-slate-blue
           bg-banniere
           d-bloc
-          bg-t-edge
           bloc-bg-texture
           texture-paper
           b-parallax
@@ -117,6 +93,18 @@
               <h1 class="text-center hero-bloc-text tc-white">
                 La chouette agence.
               </h1>
+              <div class="text-center">
+                <a
+                  href="contact.html"
+                  class="
+                    btn btn-lg btn-clean btn-rd
+                    cta-hero
+                    btn-atomic-tangerine
+                  "
+                  id="cta-hero"
+                  >Contact</a
+                >
+              </div>
             </div>
           </div>
         </div>
@@ -128,8 +116,10 @@
         <div class="container bloc-md">
           <div class="row">
             <div class="col-sm-12 text-center">
-			  <h2 style="white-space:pre-line;">La chouette agence est une agence de web design qui aide
-				  les entreprises à devenir attractives et visibles sur Internet.</h2>
+              <h2 style="white-space: pre-line">
+                La chouette agence est une agence de web design qui aide les
+                entreprises à devenir attractives et visibles sur Internet.
+              </h2>
             </div>
           </div>
           <div class="row voffset-lg med-width-whitespace">
@@ -193,10 +183,12 @@
           </div>
           <div class="row voffset-lg voffset">
             <div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-              <p id="quote" style="white-space: pre-line;">"La chouette agence est une excellente agence web ! Les
-                web designers ont réussi à capturer l'essence de notre
-                entreprise et à l'intégrer à notre site. Cela nous a aidé à
-              doubler nos ventes en ligne à Lyon."</p>
+              <p id="quote" style="white-space: pre-line">
+                "La chouette agence est une excellente agence web ! Les web
+                designers ont réussi à capturer l'essence de notre entreprise et
+                à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes
+                en ligne à Lyon."
+              </p>
               <p id="quote_name">Maxime Guibard, PDG de À vos fourchettes</p>
             </div>
           </div>
@@ -250,8 +242,10 @@
         <div class="container bloc-lg">
           <div class="row">
             <div class="col-sm-12 text-center">
-			  <h2 style="white-space: pre-line;">Nous travaillons avec beaucoup de clients,
-				  voici nos réalisations.</h2>
+              <h2 style="white-space: pre-line">
+                Nous travaillons avec beaucoup de clients, voici nos
+                réalisations.
+              </h2>
             </div>
           </div>
           <div class="row tight-width-whitespace portfolio-row">
@@ -374,39 +368,51 @@
               <p class="text-center white">
                 La chouette agence - Agence web basée à Lyon.<br />
               </p>
-			  <br />
+              <br />
               <div class="row row-no-gutters social">
                 <div class="col-sm-3">
                   <div class="text-center">
-                    <a class="social" href="https://twitter.com/" aria-label="Twitter"
+                    <a
+                      class="social"
+                      href="https://twitter.com/"
+                      aria-label="Twitter"
                       ><span class="fa fa-twitter icon-md"></span
                     ></a>
                   </div>
                 </div>
                 <div class="col-sm-3">
                   <div class="text-center">
-                    <a class="social" href="https://www.facebook.com/" aria-label="Facebook"
+                    <a
+                      class="social"
+                      href="https://www.facebook.com/"
+                      aria-label="Facebook"
                       ><span class="fa fa-facebook icon-md"></span
                     ></a>
                   </div>
                 </div>
                 <div class="col-sm-3">
                   <div class="text-center">
-                    <a class="social" href="https://dribbble.com/" aria-label="Dribbble"
+                    <a
+                      class="social"
+                      href="https://dribbble.com/"
+                      aria-label="Dribbble"
                       ><span class="fa fa-dribbble icon-md"></span
                     ></a>
                   </div>
                 </div>
                 <div class="col-sm-3">
                   <div class="text-center">
-                    <a class="social" href="https://www.instagram.com/" aria-label="Instagram"
+                    <a
+                      class="social"
+                      href="https://www.instagram.com/"
+                      aria-label="Instagram"
                       ><span class="fa fa-instagram icon-md"></span
                     ></a>
                   </div>
                 </div>
-				<br />
-				<br />
-				<br />
+                <br />
+                <br />
+                <br />
               </div>
               <div class="row">
                 <div class="col-sm-4">
