--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
                   La chouette agence - Agence web basée à Lyon.<br />
                 </p>
                 <br />
-                <div class="row row-no-gutters social">
+                <div class="row row-no-gutters social" style="display: flex; gap: 15px; justify-content: center;">
                   <div class="col-sm-3">
                     <div class="text-center">
                       <a
